--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: "T's Twitch Toolkit Purchase List"
 favicon: assets/img/favicon.png
 description: >-
-  An expanded item list for TwitchToolkit that supports most ToolkitUtils' shop.
-
+  An expanded item list specifically genterated for AlsoKnownAsT's Twitch Tool Kit
+  
 baseurl: '/T-TTK' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ''
