--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Metadata
-title: "T's Twitch Toolkit Purchase List"
+title: "T's Twitch Toolkit"
 favicon: assets/img/favicon.png
 description: >-
   An expanded item list specifically genterated for AlsoKnownAsT's Twitch Tool Kit
